// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card component renders the UI as expected 1`] = `
<div
  className="Card"
>
  <button
    type="button"
  >
    delete
  </button>
  <h3 />
  <p>
    Hello, World
  </p>
</div>
`;

exports[`Card component renders the UI as expected 2`] = `
<div
  className="Card"
>
  <button
    type="button"
  >
    delete
  </button>
  <h3>
    Title goes here
  </h3>
  <p>
    Hello, World
  </p>
</div>
`;

exports[`renders the UI as expected 1`] = `
<div
  className="Card"
>
  <button
    type="button"
  >
    delete
  </button>
  <h3 />
  <p>
    Hello, World
  </p>
</div>
`;

exports[`renders the UI as expected 2`] = `
<div
  className="Card"
>
  <button
    type="button"
  >
    delete
  </button>
  <h3>
    Title goes here
  </h3>
  <p>
    Hello, World
  </p>
</div>
`;
